# scratch-2020-09

./: README.md
3650/01/: bigger  bigger.S  h.S  hello  notes.md
3650/b/: bigger  hello  hello.S
3650/p01/: bigger.S  hello.c
3650/p03/: fact.S  foo.S  push-pop.md  segfault.S
3650/p04/: mem-regions.c  notes.md  rec.S  recursive.c  sizes.c
3650/p09a/: lock-sum101.c  seq-sum101.c  thread-sum101.c
3650/p10a/: notes.md
3650/v01/: hello.c
3650/v02/: avg  avg.S  compare  compare.S  data  data.S  ifact  ifact.S  notes.md  recipe.md  rfact  rfact.S
3650/v03/: acol  ccol  collatz.S  collatz.c  fives  fives.S  mem.md  prime.c  prime2.c  prime3.c  sum_array.S  sum_array.c  sum_array2.S  sum_array2.c  upgrades.md
3650/v04/: arrays.md  goats.c  goats2.c  lines.S  lines.c  list-isort.c  msg.txt  notes.md  sumarray.S  sumarray.c  vec.md
3650/v06/: Makefile  cstd  cstd.c  fork1  fork1.c  fork2  fork2.c  notes.md  pipe0  pipe0.c  pipe1  pipe1.c  redir  redir.c  sort-pipe  sort-pipe.c  unix  unix.c
3650/v07/: lock-sum101.c  notes.md  par-sum101.c  print-array.c  proc-sum101.c  real-work.c  rw2.c  save-array.c  seq-sum101.c  shared1.c  shared2.c  shared3.c
3650/v08/: conc-stack.c  concepts.md  create.c  sample-sort.md  seq-stack.c  thread-history.md  vmem.md
3650/v09/: allocator.md  page-tables.md
5335/01/: notes.md
5335/02/: CMakeLists.txt  brain.cc  hover1.ks  hover2.ks  hover3.ks  hover4.ks  install.ks  robot.cc  robot.hh
5335/03/: land.ks
5335/04/: orbits.ks
5335/05/: .search.md.swp  (+5 more)
5335/12/hw05/plugins/launch/: CMakeLists.txt  Makefile  launch.cc
(+254 files in other folders)
